[gd_scene load_steps=11 format=4 uid="uid://c7ho8gxtkvxyg"]

[ext_resource type="Script" uid="uid://cdrshfxrhkobf" path="res://Worlds/world.gd" id="1_osawv"]
[ext_resource type="Script" uid="uid://ggihq82b8v8s" path="res://NetworkManager/multiplayer_spawner.gd" id="2_d11ax"]
[ext_resource type="PackedScene" uid="uid://d08gn81f5b74p" path="res://Players/Player.tscn" id="3_8djc0"]
[ext_resource type="Texture2D" uid="uid://cqjwuvkvsud2i" path="res://Assets/Placeholders/Stone_Block_placed_wall.webp" id="4_ysegl"]
[ext_resource type="Texture2D" uid="uid://c6tiutygjqgf6" path="res://Assets/Placeholders/Stone_Block_placed_ground.webp" id="4_ywvb4"]
[ext_resource type="Script" uid="uid://dm22dklxlpg53" path="res://Worlds/player_selection.gd" id="6_p83nl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_p83nl"]
texture = ExtResource("4_ywvb4")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0

[sub_resource type="TileSet" id="TileSet_ysegl"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_p83nl")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ywvb4"]
texture = ExtResource("4_ysegl")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0

[sub_resource type="TileSet" id="TileSet_ywvb4"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_ywvb4")

[node name="World" type="Node2D"]
script = ExtResource("1_osawv")

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("uid://d08gn81f5b74p")
spawn_path = NodePath("..")
script = ExtResource("2_d11ax")
network_player = ExtResource("3_8djc0")

[node name="TileMap" type="Node2D" parent="."]

[node name="Ground" type="TileMapLayer" parent="TileMap"]
tile_map_data = PackedByteArray("AAD///3/AAAAAAEAAAD///7/AAAAAAEAAAD/////AAAAAAEAAAD//wAAAAAAAAEAAAD//wEAAAAAAAEAAAD//wIAAAAAAAEAAAD//wMAAAAAAAIAAAD///z/AAAAAAEAAAD///v/AAAAAAEAAAD///r/AAAAAAEAAAD///n/AAAAAAAAAAAAAPn/AAABAAAAAAABAPn/AAABAAAAAAACAPn/AAABAAAAAAADAPn/AAABAAAAAAAEAPn/AAABAAAAAAAFAPn/AAABAAAAAAAGAPn/AAABAAAAAAAHAPn/AAABAAAAAAAIAPn/AAABAAAAAAAJAPn/AAABAAAAAAAKAPn/AAABAAAAAAALAPn/AAABAAAAAAAMAPn/AAABAAAAAAANAPn/AAACAAAAAAANAPr/AAACAAEAAAANAPv/AAACAAEAAAANAPz/AAACAAEAAAANAP3/AAACAAEAAAANAP7/AAACAAEAAAANAP//AAACAAEAAAANAAAAAAACAAEAAAANAAEAAAACAAEAAAANAAMAAAACAAIAAAANAAIAAAACAAEAAAAMAAMAAAABAAIAAAALAAMAAAABAAIAAAAKAAMAAAABAAIAAAAJAAMAAAABAAIAAAAIAAMAAAABAAIAAAAHAAMAAAABAAIAAAAGAAMAAAABAAIAAAAFAAMAAAABAAIAAAAEAAMAAAABAAIAAAADAAMAAAABAAIAAAACAAMAAAABAAIAAAABAAMAAAABAAIAAAAAAAMAAAABAAIAAAD//wQAAAAAAAMAAAD//wUAAAAAAAQAAAD//wYAAAAAAAUAAAD//wcAAAAAAAYAAAAMAAQAAAABAAMAAAAMAAUAAAABAAQAAAAMAAYAAAABAAUAAAAMAAcAAAABAAYAAAALAAQAAAABAAMAAAALAAUAAAABAAQAAAALAAYAAAABAAUAAAALAAcAAAABAAYAAAAKAAQAAAABAAMAAAAKAAUAAAABAAQAAAAKAAYAAAABAAUAAAAKAAcAAAABAAYAAAAJAAQAAAABAAMAAAAJAAUAAAABAAQAAAAJAAYAAAABAAUAAAAJAAcAAAABAAYAAAAIAAQAAAABAAMAAAAIAAUAAAABAAQAAAAIAAYAAAABAAUAAAAIAAcAAAABAAYAAAAHAAQAAAABAAMAAAAHAAUAAAABAAQAAAAHAAYAAAABAAUAAAAHAAcAAAABAAYAAAAGAAQAAAABAAMAAAAGAAUAAAABAAQAAAAGAAYAAAABAAUAAAAGAAcAAAABAAYAAAAFAAQAAAABAAMAAAAFAAUAAAABAAQAAAAFAAYAAAABAAUAAAAFAAcAAAABAAYAAAAEAAQAAAABAAMAAAAEAAUAAAABAAQAAAAEAAYAAAABAAUAAAAEAAcAAAABAAYAAAADAAQAAAABAAMAAAADAAUAAAABAAQAAAADAAYAAAABAAUAAAADAAcAAAABAAYAAAACAAQAAAABAAMAAAACAAUAAAABAAQAAAACAAYAAAABAAUAAAACAAcAAAABAAYAAAABAAQAAAABAAMAAAABAAUAAAABAAQAAAABAAYAAAABAAUAAAABAAcAAAABAAYAAAAAAAQAAAABAAMAAAAAAAUAAAABAAQAAAAAAAYAAAABAAUAAAAAAAcAAAABAAYAAAANAAQAAAACAAMAAAANAAUAAAACAAQAAAANAAYAAAACAAUAAAANAAcAAAACAAYAAAAAAPr/AAABAAEAAAABAPr/AAABAAEAAAACAPr/AAABAAEAAAADAPr/AAABAAEAAAAEAPr/AAABAAEAAAAFAPr/AAABAAEAAAAGAPr/AAABAAEAAAAHAPr/AAABAAEAAAAIAPr/AAABAAEAAAAJAPr/AAABAAEAAAAKAPr/AAABAAEAAAALAPr/AAABAAEAAAAMAPr/AAABAAEAAAAMAPv/AAABAAEAAAALAPv/AAABAAEAAAAKAPv/AAABAAEAAAAJAPv/AAABAAEAAAAIAPv/AAABAAEAAAAHAPv/AAABAAEAAAAGAPv/AAABAAEAAAAFAPv/AAABAAEAAAAEAPv/AAABAAEAAAADAPv/AAABAAEAAAACAPv/AAABAAEAAAABAPv/AAABAAEAAAAAAPv/AAABAAEAAAAAAPz/AAABAAEAAAABAPz/AAABAAEAAAACAPz/AAABAAEAAAADAPz/AAABAAEAAAAEAPz/AAABAAEAAAAFAPz/AAABAAEAAAAGAPz/AAABAAEAAAAHAPz/AAABAAEAAAALAPz/AAABAAEAAAAMAPz/AAABAAEAAAAMAP3/AAABAAEAAAAMAP7/AAABAAEAAAAMAP//AAABAAEAAAAMAAAAAAABAAEAAAAMAAEAAAABAAEAAAAMAAIAAAABAAEAAAALAAIAAAABAAEAAAAKAAIAAAABAAEAAAAJAAIAAAABAAEAAAAIAAIAAAABAAEAAAAHAAIAAAABAAEAAAAGAAIAAAABAAEAAAAFAAIAAAABAAEAAAAEAAIAAAABAAEAAAADAAIAAAABAAEAAAACAAIAAAABAAEAAAABAAIAAAABAAEAAAAAAAIAAAABAAEAAAAAAAEAAAABAAEAAAABAAEAAAABAAEAAAACAAEAAAABAAEAAAADAAEAAAABAAEAAAAEAAEAAAABAAEAAAAFAAEAAAABAAEAAAAGAAEAAAABAAEAAAAHAAEAAAABAAEAAAAIAAEAAAABAAEAAAAJAAEAAAABAAEAAAAKAAEAAAABAAEAAAALAAEAAAABAAEAAAALAAAAAAABAAEAAAAKAAAAAAABAAEAAAAJAAAAAAABAAEAAAAIAAAAAAABAAEAAAAHAAAAAAABAAEAAAAGAAAAAAABAAEAAAAFAAAAAAABAAEAAAAEAAAAAAABAAEAAAADAAAAAAABAAEAAAACAAAAAAABAAEAAAABAAAAAAABAAEAAAAAAAAAAAABAAEAAAAAAP//AAABAAEAAAABAP//AAABAAEAAAACAP//AAABAAEAAAADAP//AAABAAEAAAAEAP//AAABAAEAAAAFAP//AAABAAEAAAAGAP//AAABAAEAAAAHAP//AAABAAEAAAAIAP//AAABAAEAAAAJAP//AAABAAEAAAAKAP//AAABAAEAAAALAP//AAABAAEAAAALAP7/AAABAAEAAAAKAP7/AAABAAEAAAAJAP7/AAABAAEAAAAIAP7/AAABAAEAAAAHAP7/AAABAAEAAAAGAP7/AAABAAEAAAAFAP7/AAABAAEAAAAEAP7/AAABAAEAAAADAP7/AAABAAEAAAACAP7/AAABAAEAAAABAP7/AAABAAEAAAAAAP7/AAABAAEAAAAAAP3/AAABAAEAAAABAP3/AAABAAEAAAACAP3/AAABAAEAAAADAP3/AAABAAEAAAAEAP3/AAABAAEAAAAFAP3/AAABAAEAAAAGAP3/AAABAAEAAAAHAP3/AAABAAEAAAAIAP3/AAABAAEAAAAJAP3/AAABAAEAAAAKAP3/AAABAAEAAAALAP3/AAABAAEAAAAKAPz/AAABAAEAAAAJAPz/AAABAAEAAAAIAPz/AAABAAEAAAA=")
tile_set = SubResource("TileSet_ysegl")

[node name="Walls" type="TileMapLayer" parent="TileMap"]
z_index = 9
tile_set = SubResource("TileSet_ywvb4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="InventoryInterface" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="InGameMenu" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/InGameMenu"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SaveButton" type="Button" parent="CanvasLayer/InGameMenu/VBoxContainer"]
layout_mode = 2
text = "Save"

[node name="ExitButton" type="Button" parent="CanvasLayer/InGameMenu/VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="CloseServerButton" type="Button" parent="CanvasLayer/InGameMenu/VBoxContainer"]
layout_mode = 2
text = "Close server"

[node name="PlayerSelection" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchor_left = 0.499
anchor_top = 0.5
anchor_right = 0.499
anchor_bottom = 0.5
offset_left = -255.84802
offset_top = -324.0
offset_right = 184.15198
offset_bottom = 324.0
script = ExtResource("6_p83nl")

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/PlayerSelection"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -323.0
offset_right = 160.0
offset_bottom = 323.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="CharacterSlotsVBoxContainer" type="VBoxContainer" parent="CanvasLayer/PlayerSelection/ScrollContainer"]
layout_mode = 2

[node name="ConnectedPlayersLabel" type="Label" parent="CanvasLayer/PlayerSelection/ScrollContainer/CharacterSlotsVBoxContainer"]
layout_mode = 2
text = "Connected players :"

[node name="Label" type="Label" parent="CanvasLayer/PlayerSelection/ScrollContainer/CharacterSlotsVBoxContainer"]
layout_mode = 2
text = "Choose your Character"

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PlayerSelection/ScrollContainer/CharacterSlotsVBoxContainer"]
layout_mode = 2

[node name="CreateCharacterLineEdit" type="LineEdit" parent="CanvasLayer/PlayerSelection/ScrollContainer/CharacterSlotsVBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
placeholder_text = "Player name"

[node name="CreateCharacterButton" type="Button" parent="CanvasLayer/PlayerSelection/ScrollContainer/CharacterSlotsVBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Create character"

[node name="ErrorLabel" type="Label" parent="CanvasLayer/PlayerSelection/ScrollContainer/CharacterSlotsVBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7786795, 0.015600187, 7.70092e-07, 1)
text = "Error"

[connection signal="pressed" from="CanvasLayer/InGameMenu/VBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="CanvasLayer/InGameMenu/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/InGameMenu/VBoxContainer/CloseServerButton" to="." method="_on_close_server_button_pressed"]
[connection signal="pressed" from="CanvasLayer/PlayerSelection/ScrollContainer/CharacterSlotsVBoxContainer/HBoxContainer/CreateCharacterButton" to="CanvasLayer/PlayerSelection" method="_on_create_character_button_pressed"]
